[project]
name = "adventofcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "requests>=2.32.3",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
lint.ignore = ["E741"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
