[project]
name = "adventofcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.6",
    "requests>=2.32.3",
    "shapely>=2.1.2",
    "z3-solver>=4.15.4.0",
]

[tool.ruff]
lint.ignore = ["E741"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.0",
    "jupyter>=1.1.1",
]
